--- a/app/src/main/res/layout/layout_totp_item.xml
+++ b/app/src/main/res/layout/layout_totp_item.xml
@@ -3,7 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginTop="8dp"
+    android:background="@drawable/bg_item_totp"
+    android:elevation="8dp"
+    android:paddingVertical="4dp"
+    android:paddingStart="10dp">
 
     <TextView
         android:id="@+id/totp_name"
@@ -32,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="#333333"
-        android:textSize="28dp"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="@+id/totp_account"
         app:layout_constraintTop_toBottomOf="@+id/totp_account"
         tools:text="123 456" />
