--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,5 +29,15 @@
         android:layout_gravity="end|bottom"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
-        android:src="@drawable/add" />
+        android:src="@drawable/add"
+        android:visibility="gone" />
+
+    <com.leinardi.android.speeddial.SpeedDialView
+        android:id="@+id/speedDial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
+        app:sdMainFabClosedSrc="@drawable/add" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
