--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,5 +39,6 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
+        android:theme="@style/AppTheme.FloatingActionButton2"
         app:sdMainFabClosedSrc="@drawable/add" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
