--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,16 +27,14 @@
         <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
         <item name="colorOnSurfaceInverse">@color/md_theme_light_inverseOnSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
-
-        <item name="floatingActionButtonStyle">@style/ShapeAppearanceOverlay.Fab</item>
     </style>
 
-    <style name="ShapeAppearanceOverlay.Fab">
-        <item name="shapeAppearance">@style/ShapeAppearanceOverlay.Fab.RoundedCorners</item>
+    <style name="AppTheme.FloatingActionButton2" parent="AppTheme">
+        <item name="floatingActionButtonStyle">@style/AppTheme.FloatingActionButton</item>
     </style>
 
-    <style name="ShapeAppearanceOverlay.Fab.RoundedCorners">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">50%</item>
+    <!-- 创建一个新的样式继承自 M2 的 FAB 样式 -->
+    <style name="AppTheme.FloatingActionButton" parent="Widget.MaterialComponents.FloatingActionButton">
+        <!-- 在这里你可以自定义你想要的属性 -->
     </style>
 </resources>
