feat:change the way to add totp

--- a/app/src/main/res/layout/activity_scan_totp.xml
+++ b/app/src/main/res/layout/activity_scan_totp.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.AddTotpActivity">
+    tools:context=".ui.totp.ScanTotpActivity">
 
     <cn.bingoogolapple.qrcode.zxing.ZXingView
         android:id="@+id/zxingview"
