--- a/app/src/main/res/layout/layout_totp_item.xml
+++ b/app/src/main/res/layout/layout_totp_item.xml
@@ -15,6 +15,7 @@
         android:id="@+id/totp_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:textColor="#666666"
         android:textSize="22dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,9 +37,11 @@
         android:id="@+id/totp_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
         android:textColor="#333333"
         android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/totp_account"
         app:layout_constraintTop_toBottomOf="@+id/totp_account"
         tools:text="123 456" />
