--- a/app/src/main/res/layout/layout_totp_item.xml
+++ b/app/src/main/res/layout/layout_totp_item.xml
@@ -7,15 +7,23 @@
     android:layout_marginHorizontal="8dp"
     android:layout_marginTop="8dp"
     android:background="@drawable/bg_item_totp"
-    android:elevation="8dp"
-    android:paddingVertical="4dp"
-    android:paddingStart="10dp">
+    android:elevation="8dp">
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="?android:attr/selectableItemBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/totp_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="10dp"
         android:textColor="#666666"
         android:textSize="22dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +37,7 @@
         android:layout_marginTop="4dp"
         android:textColor="#7D7D7D"
         android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/totp_name"
         app:layout_constraintTop_toBottomOf="@+id/totp_name"
         tools:text="gotcha1874@gmail.com" />
 
