--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,3 @@
-
 <resources>
     <color name="seed">#6750A4</color>
     <color name="md_theme_light_primary">#6750A4</color>
@@ -61,4 +60,6 @@
     <color name="md_theme_dark_surfaceTint">#D0BCFF</color>
     <color name="md_theme_dark_outlineVariant">#49454F</color>
     <color name="md_theme_dark_scrim">#000000</color>
+
+    <color name="white">#ffffff</color>
 </resources>
