style(UI): Update to align with Material Design guidelines

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,18 +16,17 @@
             android:id="@+id/search_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:background="@color/white"
-            android:elevation="8dp">
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="15dp"
+            android:background="#ECE7F3">
 
             <ImageButton
                 android:id="@+id/search_bar_menu_icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginVertical="6dp"
-                android:layout_marginStart="4dp"
+                android:layout_marginVertical="8dp"
+                android:layout_marginStart="6dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/icon_search_bar_menu"
                 app:layout_constraintBottom_toBottomOf="parent"
