--- a/app/src/main/res/layout/layout_totp_item.xml
+++ b/app/src/main/res/layout/layout_totp_item.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginTop="8dp"
-    android:background="@drawable/bg_item_totp"
-    android:elevation="8dp">
+    android:layout_marginHorizontal="12dp"
+    android:layout_marginVertical="4dp"
+    android:background="@null">
 
     <View
         android:layout_width="0dp"
@@ -22,8 +21,8 @@
         android:id="@+id/totp_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="10dp"
         android:textColor="#666666"
         android:textSize="22dp"
         app:layout_constraintStart_toStartOf="parent"
