--- a/app/src/main/res/drawable/icon_search_bar_menu.xml
+++ b/app/src/main/res/drawable/icon_search_bar_menu.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="20"
     android:viewportHeight="21">
     <path
-        android:fillColor="#FF172B4D"
+        android:fillColor="#333333"
         android:pathData="M3.92 17.12C3.4 17.12 3 16.7 3 16.18c0-0.54 0.4-0.95 0.92-0.95h12.16c0.52 0 0.91 0.41 0.91 0.95 0 0.53-0.4 0.94-0.91 0.94H3.92c0.03 0 0.03 0 0 0Zm0-5.72C3.4 11.4 3 10.99 3 10.45c0-0.53 0.4-0.94 0.92-0.94h12.16c0.52 0 0.91 0.4 0.91 0.94 0 0.54-0.4 0.95-0.91 0.95H3.92c0.03 0 0.03 0 0 0Zm0-5.73C3.4 5.67 3 5.27 3 4.73c0-0.54 0.4-0.94 0.92-0.94h12.16c0.52 0 0.91 0.4 0.91 0.94 0 0.53-0.4 0.94-0.91 0.94H3.92c0.03 0 0.03 0 0 0Z" />
 </vector>
