--- a/app/src/main/res/layout/activity_scan_totp.xml
+++ b/app/src/main/res/layout/activity_scan_totp.xml
@@ -17,16 +17,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:qrcv_animTime="1000"
-        app:qrcv_borderColor="@color/md_theme_light_primaryContainer"
+        app:qrcv_borderColor="@color/md_theme_primaryContainer"
         app:qrcv_borderSize="1dp"
-        app:qrcv_cornerColor="@color/md_theme_light_primary"
+        app:qrcv_cornerColor="@color/md_theme_primary"
         app:qrcv_cornerLength="20dp"
         app:qrcv_cornerSize="3dp"
         app:qrcv_isTipTextBelowRect="true"
         app:qrcv_maskColor="#33FFFFFF"
         app:qrcv_qrCodeTipText="将二维码放入框内，即可自动扫描"
         app:qrcv_rectWidth="200dp"
-        app:qrcv_scanLineColor="@color/md_theme_light_primary"
+        app:qrcv_scanLineColor="@color/md_theme_primary"
         app:qrcv_scanLineSize="1dp"
         app:qrcv_verticalBias="0.5" />
 
