--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,14 +8,32 @@
     tools:context=".ui.settings.SettingsActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/server_url_layout"
+        android:id="@+id/sync_menu_text_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:hint="@string/hint_server_url"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <AutoCompleteTextView
+            android:id="@+id/sync_auto_complete_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="none" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/server_url_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="@string/hint_server_url"
+        app:layout_constraintEnd_toEndOf="@+id/sync_menu_text_layout"
+        app:layout_constraintStart_toStartOf="@+id/sync_menu_text_layout"
+        app:layout_constraintTop_toBottomOf="@+id/sync_menu_text_layout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/server_url_edit_text"
