--- a/app/src/main/res/drawable/icon_search_bar_menu.xml
+++ b/app/src/main/res/drawable/icon_search_bar_menu.xml
@@ -1,10 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="21dp"
-    android:viewportWidth="20"
-    android:viewportHeight="21">
-    <path
-        android:fillColor="#333333"
-        android:pathData="M3.92 17.12C3.4 17.12 3 16.7 3 16.18c0-0.54 0.4-0.95 0.92-0.95h12.16c0.52 0 0.91 0.41 0.91 0.95 0 0.53-0.4 0.94-0.91 0.94H3.92c0.03 0 0.03 0 0 0Zm0-5.72C3.4 11.4 3 10.99 3 10.45c0-0.53 0.4-0.94 0.92-0.94h12.16c0.52 0 0.91 0.4 0.91 0.94 0 0.54-0.4 0.95-0.91 0.95H3.92c0.03 0 0.03 0 0 0Zm0-5.73C3.4 5.67 3 5.27 3 4.73c0-0.54 0.4-0.94 0.92-0.94h12.16c0.52 0 0.91 0.4 0.91 0.94 0 0.53-0.4 0.94-0.91 0.94H3.92c0.03 0 0.03 0 0 0Z" />
+<vector android:height="200dp" android:viewportHeight="24"
+    android:viewportWidth="24" android:width="200dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#666666" android:pathData="M10,12a2,2 0,1 0,4 0a2,2 0,0 0,-4 0zM10,6a2,2 0,1 0,4 0a2,2 0,0 0,-4 0zM10,18a2,2 0,1 0,4 0a2,2 0,0 0,-4 0z"/>
 </vector>
