--- a/app/src/main/res/layout/activity_input_manual.xml
+++ b/app/src/main/res/layout/activity_input_manual.xml
@@ -23,7 +23,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="?android:attr/selectableItemBackground"
-            android:src="@drawable/back" />
+            android:src="@drawable/icon_back" />
 
         <Space
             android:layout_width="0dp"
