--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,10 @@
         <item name="colorSurfaceInverse">@color/md_theme_inverseSurface</item>
         <item name="colorOnSurfaceInverse">@color/md_theme_inverseOnSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_inversePrimary</item>
+        // make action mode overlay, change height to 88dp
+        <item name="actionModeStyle">@style/AppTheme.ActionMode</item>
+        <item name="windowActionModeOverlay">true</item>
+        <item name="android:windowActionModeOverlay">true</item>
     </style>
 
     <style name="AppTheme.FloatingActionButton2" parent="AppTheme">
@@ -36,5 +40,9 @@
     <!-- 创建一个新的样式继承自 M2 的 FAB 样式 -->
     <style name="AppTheme.FloatingActionButton" parent="Widget.MaterialComponents.FloatingActionButton">
         <!-- 在这里你可以自定义你想要的属性 -->
+    </style>
+
+    <style name="AppTheme.ActionMode" parent="Widget.Material3.ActionMode">
+        <item name="height">78dp</item>
     </style>
 </resources>
