--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <<TextView
+        <TextView
         android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
