--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,13 +40,21 @@
         tools:itemCount="10"
         tools:listitem="@layout/layout_totp_item" />
 
-    <com.leinardi.android.speeddial.SpeedDialView
+    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
+        android:id="@+id/speedDialOverlayLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="fill"
+        android:background="@color/bg_speed_dial_expand"
+        android:fitsSystemWindows="true" />
+
+    <com.joykeepsflowin.material.MaterialSpeedDialView
         android:id="@+id/speedDial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:theme="@style/AppTheme.FloatingActionButton2"
-        app:sdMainFabClosedSrc="@drawable/add" />
+        app:sdMainFabClosedSrc="@drawable/add"
+        app:sdOverlayLayout="@id/speedDialOverlayLayout" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
