--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -33,4 +33,5 @@
 
     <color name="surface_on">#272430</color>
     <color name="action_bar_color">#312f3a</color>
+    <color name="bg_speed_dial_expand">#8049454F</color>
 </resources>
