--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,55 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_scrollFlags="scroll|enterAlways">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <com.google.android.material.search.SearchBar
-            android:id="@+id/search_bar"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_container_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_search_bar" />
-    </com.google.android.material.appbar.AppBarLayout>
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-    <com.google.android.material.search.SearchView
-        android:id="@+id/search_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_anchor="@id/search_bar">
-        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
-    </com.google.android.material.search.SearchView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/totp_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:attr/selectableItemBackground"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:itemCount="10"
-        tools:listitem="@layout/layout_totp_item" />
-
-    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
-        android:id="@+id/speedDialOverlayLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="fill"
-        android:background="@color/bg_speed_dial_expand"
-        android:fitsSystemWindows="true" />
-
-    <com.joykeepsflowin.material.MaterialSpeedDialView
-        android:id="@+id/speedDial"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        app:sdMainFabClosedSrc="@drawable/add"
-        app:sdOverlayLayout="@id/speedDialOverlayLayout" />
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation_view"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            app:labelVisibilityMode="unlabeled"
+            app:menu="@menu/home_bottom_nav" />
+    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
