--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -38,6 +38,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/profile_cloud_sync"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
@@ -50,6 +51,7 @@
             android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/icon_cloud_sync"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -67,6 +69,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/profile_about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/selectableItemBackground"
@@ -79,6 +82,7 @@
             android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/icon_profile_info"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -93,5 +97,10 @@
             app:layout_constraintBottom_toBottomOf="@+id/profile_app_icon_iv"
             app:layout_constraintStart_toEndOf="@+id/profile_app_icon_iv"
             app:layout_constraintTop_toTopOf="@+id/profile_app_icon_iv" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
     </LinearLayout>
 </LinearLayout>
