--- a/app/src/main/res/layout/layout_totp_item.xml
+++ b/app/src/main/res/layout/layout_totp_item.xml
@@ -23,8 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
-        android:textColor="#666666"
-        android:textSize="22dp"
+        android:includeFontPadding="false"
+        android:textColor="#333333"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Google" />
@@ -33,9 +34,10 @@
         android:id="@+id/totp_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textColor="#7D7D7D"
-        android:textSize="16dp"
+        android:layout_marginTop="5dp"
+        android:includeFontPadding="false"
+        android:textColor="#333333"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@+id/totp_name"
         app:layout_constraintTop_toBottomOf="@+id/totp_name"
         tools:text="gotcha1874@gmail.com" />
@@ -44,10 +46,12 @@
         android:id="@+id/totp_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="6dp"
+        android:includeFontPadding="false"
         android:textColor="#333333"
         android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/totp_account"
         app:layout_constraintTop_toBottomOf="@+id/totp_account"
