--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
 
     <color name="white">#ffffff</color>
     <color name="surface_on">#EEE5F5</color>
-    <color name="action_bar_color">#f2eaf8</color>
+    <color name="home_action_mode_status_bar_color">#f2eaf8</color>
+    <color name="home_action_mode_navigation_bar_color">#f0e9f6</color>
     <color name="bg_speed_dial_expand">#80E7E0EC</color>
 </resources>
